; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/core/extr_containers_bits.c_vc_container_bits_read_u32_exp_golomb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/core/extr_containers_bits.c_vc_container_bits_read_u32_exp_golomb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vc_container_bits_read_u32_exp_golomb(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @vc_container_bits_get_leading_zero_bits(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp sgt i32 %8, 32
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @vc_container_bits_invalidate(i32* %11)
  store i32 %12, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @vc_container_bits_read_u32(i32* %14, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %17, 32
  br i1 %18, label %19, label %26

19:                                               ; preds = %13
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @vc_container_bits_invalidate(i32* %23)
  store i32 %24, i32* %2, align 4
  br label %32

25:                                               ; preds = %19
  store i32 -1, i32* %2, align 4
  br label %32

26:                                               ; preds = %13
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %4, align 4
  %29 = shl i32 1, %28
  %30 = add nsw i32 %27, %29
  %31 = sub nsw i32 %30, 1
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %26, %25, %22, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @vc_container_bits_get_leading_zero_bits(i32*) #1

declare dso_local i32 @vc_container_bits_invalidate(i32*) #1

declare dso_local i32 @vc_container_bits_read_u32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
